fix(styles): vertical align info label icon (#3731)

--- a/src/styles/info-label.scss
+++ b/src/styles/info-label.scss
@@ -58,6 +58,10 @@ $color-accents: (
         }
       }
     }
+
+    &::before {
+      vertical-align: middle;
+    }
   }
 
   &__text {
